Mon Feb  8 07:46:43 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/ComponentServer/CIAO_ComponentServer_Task.cpp:
          Fixed memory leak

Fri Feb  5 19:45:46 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tools/IDL3_to_XMI/IDL3_to_XMI_visitor.h:
        * tools/IDL3_to_XMI/IR_Simulator_visitor.cpp:
        * tools/IDL3_to_XMI/IDL3_to_XMI_visitor.cpp:
        * tools/IDL3_to_XMI/IR_Simulator_visitor.h:

          Updates to eliminate build errors due to frontend
          changes in home factories and finders. Further
          work is needed for this tool to support home factories
          and finders.

Fri Feb  5 15:02:23 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/CSLDeadline/Receiver/CSL_DeadlineTest_Receiver_exec.h:
        * connectors/dds4ccm/tests/CSLDeadline/Receiver/CSL_DeadlineTest_Receiver_exec.cpp:
          Implemented thread switch. Test result was incorrectly printed.

        * connectors/dds4ccm/tests/CSLSampleRejected/Receiver/CSL_SRTest_Receiver_exec.cpp:
          Code aligning.

Fri Feb  5 14:07:48 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/TimeConversion/Time_Conversion.mpc:
          Resolved compiler issues on windows.

Fri Feb  5 13:11:13 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/docs/TestCoverage.ods:
          Updated.

        * connectors/dds4ccm/impl/ndds/DataReaderStateListener_T.cpp:
        * connectors/dds4ccm/tests/CSLSampleRejected/Receiver/CSL_SRTest_Receiver_exec.cpp:
        * connectors/dds4ccm/tests/ListenOneByOne/Receiver/LOBO_Test_Receiver_exec.cpp:
        * connectors/dds4ccm/tests/PSLSampleLost/Receiver/PSL_SampleLost_Receiver_exec.h:
        * connectors/dds4ccm/tests/PSLSampleLost/Receiver/PSL_SampleLost_Receiver_exec.cpp:
          Test on thread handle is NIL.

        * connectors/dds4ccm/tests/SLOneByOne/Receiver/SL_OneByOne_Receiver_exec.h: