@@ -263,28 +263,31 @@ namespace CIAO_LOBO_Test_Receiver_Impl
                                "one_by_one callback. "
                                "Test passed!\n"));
       }
-    if (this->thread_id_listener_.value () == 0)
-      {
-        ACE_ERROR ((LM_ERROR, "ERROR: "
-                               "Thread ID for ReaderListener not set!\n"));
-      }
-    else if (this->thread_id_listener_.value () == ACE_Thread::self ())
-      {
-        ACE_ERROR ((LM_ERROR, "ERROR: ONE_BY_ONE: "
-                               "Thread switch for ReaderListener "
-                               "doesn't seem to work! "
-                               "listener <%u> - component <%u>\n",
-                               this->thread_id_listener_.value (),
-                               ACE_Thread::self ()));
-      }
-    else
-      {
-        ACE_DEBUG ((LM_DEBUG, "ONE_BY_ONE: "
-                               "Thread switch for ReaderListener seems OK. "
-                               "listener <%u> - component <%u>\n",
-                               this->thread_id_listener_.value (),
-                               ACE_Thread::self ()));
-      }
+    #if defined (CIAO_DDS4CCM_CONTEXT_SWITCH) && (CIAO_DDS4CCM_CONTEXT_SWITCH == 1)
+      if (this->thread_id_listener_.value () == 0)
+        {
+          ACE_ERROR ((LM_ERROR, "ERROR: "
+                                "Thread ID for ReaderListener not set!\n"));
+        }
+      else if (ACE_OS::thr_equal (this->thread_id_listener_.value (),
+                                 ACE_Thread::self ()))
+        {
+          ACE_ERROR ((LM_ERROR, "ERROR: ONE_BY_ONE: "
+                                "Thread switch for ReaderListener "
+                                "doesn't seem to work! "
+                                "listener <%u> - component <%u>\n",
+                                this->thread_id_listener_.value (),
+                                ACE_Thread::self ()));
+        }
+      else
+        {
+          ACE_DEBUG ((LM_DEBUG, "ONE_BY_ONE: "
+                                "Thread switch for ReaderListener seems OK. "
+                                "listener <%u> - component <%u>\n",
+                                this->thread_id_listener_.value (),
+                                ACE_Thread::self ()));
+        }
+     #endif
   }
 
   extern "C" RECEIVER_EXEC_Export ::Components::EnterpriseComponent_ptr
